<resources>
    <string name="app_name">As Ma</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>

    <string name="Password_Confirm">Password Confirm</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Date_Of_Birth">Date Of Birth</string>
    <string name="Select_a_Country">Select a Country</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Already_have_an_account">Already have an account ? Log in</string>
    <string name="Login">Login</string>
    <string name="Afghanistan">Afghanistan</string>
    <string name="Albania">Albania</string>
    <string name="Algeria">Algeria</string>
    <string name="Andorra">Andorra</string>
    <string name="Angola">Angola</string>
    <string name="Email_or_Password_not_correct">Email or Password do not correct</string>
    <string name="Failed_canot_be_empty">Failed can not be empty</string>
    <string name="Please_Enter_valid_Email">Please Enter a valid Email address</string>
    <string name="Password_too_weak">Password too weak</string>
    <string name="Passwords_are_not_same">Passwords are not same</string>
    <string name="Phone_number_not_valid">Phone number not valid</string>
    <string name="Please_take_profile">Please take a profile picture</string>
    <string name="Please_select_Country">Please select a Country</string>

</resources>
