<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sign_profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sign_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/sign_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/sign_pass_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password_Confirm"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sign_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Phone_Number"
            android:inputType="phone"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/sign_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Date_Of_Birth"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sign_birth2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"/>
    </android.support.design.widget.TextInputLayout>

   <AutoCompleteTextView
        android:id="@+id/sign_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Select_a_Country"
        android:completionThreshold="1"/>


    <Button
        android:id="@+id/sign_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sign_Up"/>

    <TextView
        android:id="@+id/sign_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Already_have_an_account"/>



</LinearLayout>

</ScrollView>